Add GMount attribute to NautilusFile. (not implemented yet)
2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-file-attributes.h:
        * libnautilus-private/nautilus-file-private.h:
	Add GMount attribute to NautilusFile.
	(not implemented yet)
	
        * Makefile.am:
        * configure.in:
        * data/nautilus.xml.in:
        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        * libnautilus-private/nautilus-autorun.[ch]:
        * libnautilus-private/nautilus-global-preferences.c:
        * libnautilus-private/nautilus-global-preferences.h:
        * libnautilus-private/nautilus-program-choosing.c:
        * src/Makefile.am:
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-application.c:
        * src/nautilus-autorun-software.c: Added.
        * src/nautilus-file-management-properties.c:
        * src/nautilus-file-management-properties.glade:
        * src/nautilus-window-manage-views.c:
        * src/nautilus-x-content-bar.[ch]: Added.
	More work on autorun and x-content types from David Zeuthen


svn path=/trunk/; revision=13616

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,8 @@ desktop_in_files = 					\
 	nautilus-home.desktop.in			\
 	nautilus-computer.desktop.in			\
 	nautilus-folder-handler.desktop.in		\
-	nautilus-file-management-properties.desktop.in
+	nautilus-file-management-properties.desktop.in  \
+	nautilus-autorun-software.desktop.in
 
 SUBDIRS =			\
 	libnautilus-extension	\
