--- a/configure.in
+++ b/configure.in
@@ -484,6 +484,7 @@ nautilus-file-management-properties.desktop.in
 nautilus-home.desktop.in
 nautilus.desktop.in
 nautilus-folder-handler.desktop.in
+nautilus-autorun-software.desktop.in
 po/Makefile.in
 src/Makefile
 src/file-manager/Makefile
