Update for release
2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump glib requirement to 2.15.3


svn path=/trunk/; revision=13628

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -37,6 +37,7 @@ libnautilus-private/nautilus-search-directory-file.c
 libnautilus-private/nautilus-tree-view-drag-dest.c
 libnautilus-private/nautilus-undo-signal-handlers.c
 libnautilus-private/nautilus-vfs-file.c
+nautilus-autorun-software.desktop.in.in
 nautilus-computer.desktop.in.in
 nautilus-file-management-properties.desktop.in.in
 nautilus-folder-handler.desktop.in.in
@@ -59,6 +60,7 @@ src/file-manager/nautilus-directory-view-ui.xml
 src/file-manager/nautilus-icon-view-ui.xml
 src/file-manager/nautilus-list-view-ui.xml
 src/nautilus-application.c
+src/nautilus-autorun-software.c
 src/nautilus-bookmarks-window.c
 src/nautilus-bookmarks-window.glade
 src/nautilus-desktop-window.c
@@ -89,13 +91,14 @@ src/nautilus-side-pane.c
 src/nautilus-sidebar-title.c
 src/nautilus-spatial-window-ui.xml
 src/nautilus-spatial-window.c
-src/nautilus-trash-bar.c
 src/nautilus-throbber.c
+src/nautilus-trash-bar.c
 src/nautilus-window-bookmarks.c
 src/nautilus-window-manage-views.c
 src/nautilus-window-menus.c
 src/nautilus-window-private.h
 src/nautilus-window-toolbars.c
 src/nautilus-window.c
+src/nautilus-x-content-bar.c
 src/nautilus-zoom-control.c
 src/network-scheme.desktop.in
