Clean up strings for l10n. (#510327)
2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        * libnautilus-private/nautilus-file-operations.c:
        * src/Nautilus_shell.server.in:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/nautilus-connect-server-dialog-main.c:
        * src/nautilus-file-management-properties.glade:
        * src/nautilus-navigation-window-menus.c:
	Clean up strings for l10n. (#510327)


svn path=/trunk/; revision=13635

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -456,7 +456,7 @@ most cases, this should be left alone. -->Sans 10</default>
       <type>bool</type>
       <default>false</default>
       <locale name="C">
-         <short>Custom Background Set</short>
+         <short>Custom Background</short>
          <long>Whether a custom default folder background has been set.</long>
       </locale>
     </schema>
