--- a/src/Nautilus_shell.server.in
+++ b/src/Nautilus_shell.server.in
@@ -13,8 +13,8 @@
     <item value="IDL:Bonobo/Unknown:1.0"/>
     <item value="IDL:Nautilus/Shell:1.0"/>
   </oaf_attribute>
-  <oaf_attribute name="name" type="string" _value="Nautilus shell"/>
-  <oaf_attribute name="description" type="string" _value="Nautilus shell operations that can be done from subsequent command-line invocations"/>
+  <oaf_attribute name="name" type="string" _value="Nautilus instance"/>
+  <oaf_attribute name="description" type="string" _value="Nautilus operations that can be done from subsequent command-line invocations"/>
 </oaf_server>
 
 <oaf_server iid="OAFIID:Nautilus_Metafile_Factory" type="factory" location="OAFIID:Nautilus_Factory">
