--- a/nautilus-computer.desktop.in.in
+++ b/nautilus-computer.desktop.in.in
@@ -4,7 +4,7 @@ _Name=Computer
 _Comment=Browse all local and remote disks and folders accessible from this computer
 TryExec=nautilus
 Exec=nautilus --no-desktop computer:
-Icon=gnome-fs-client
+Icon=computer
 Terminal=false
 StartupNotify=true
 Type=Application
