--- a/nautilus-file-management-properties.desktop.in.in
+++ b/nautilus-file-management-properties.desktop.in.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=File Management
 _Comment=Change the behaviour and appearance of file manager windows
 Exec=nautilus-file-management-properties
-Icon=file-manager
+Icon=system-file-manager
 Terminal=false
 Type=Application
 StartupNotify=true
