--- a/nautilus-folder-handler.desktop.in.in
+++ b/nautilus-folder-handler.desktop.in.in
@@ -5,6 +5,7 @@ TryExec=nautilus
 Exec=nautilus --no-desktop %U
 NoDisplay=true
 Terminal=false
+Icon=folder-open
 StartupNotify=true
 Type=Application
 MimeType=x-directory/gnome-default-handler;x-directory/normal;inode/directory;application/x-gnome-saved-search;
