--- a/nautilus-home.desktop.in.in
+++ b/nautilus-home.desktop.in.in
@@ -4,7 +4,7 @@ _Name=Home Folder
 _Comment=Open your personal folder
 TryExec=nautilus
 Exec=nautilus --no-desktop
-Icon=gnome-fs-home
+Icon=user-home
 Terminal=false
 StartupNotify=true
 Type=Application
