--- a/nautilus.desktop.in.in
+++ b/nautilus.desktop.in.in
@@ -4,7 +4,7 @@ _Name=File Browser
 _Comment=Browse the file system with the file manager
 TryExec=nautilus
 Exec=nautilus --no-desktop --browser %U
-Icon=file-manager
+Icon=system-file-manager
 Terminal=false
 StartupNotify=true
 Type=Application
