--- a/src/network-scheme.desktop.in
+++ b/src/network-scheme.desktop.in
@@ -7,6 +7,6 @@ Exec=nautilus --no-desktop network:
 Terminal=false
 StartupNotify=true
 Type=Application
-Icon=gnome-fs-network
+Icon=network-workgroup
 Categories=Core;
 OnlyShowIn=GNOME;
