Remove deprecated GLib symbols and build with -DG_DISABLE_DEPRECATED.
2008-02-07  A. Walton <awalton@svn.gnome.org>
* configure.in:
* libnautilus-private/nautilus-emblem-utils.c:
(is_reserved_keyword):
* libnautilus-private/nautilus-file.c:
(nautilus_file_fit_date_as_string):
* src/file-manager/fm-list-model.c: (fm_list_model_get_value):
Remove deprecated GLib symbols and build with -DG_DISABLE_DEPRECATED.

svn path=/trunk/; revision=13704

--- a/configure.in
+++ b/configure.in
@@ -408,7 +408,7 @@ AC_SUBST(CORE_LIBS)
 CORE_IDL_INCLUDES="`$PKG_CONFIG --variable=idldir $CORE_MODULES | $srcdir/add-include-prefix`"
 AC_SUBST(CORE_IDL_INCLUDES)
 
-DISABLE_DEPRECATED_CFLAGS=""
+DISABLE_DEPRECATED_CFLAGS="-DG_DISABLE_DEPRECATED"
 
 dnl Multimedia keys
 AC_CHECK_HEADERS([X11/XF86keysym.h])
