--- a/configure.in
+++ b/configure.in
@@ -426,7 +426,7 @@ dnl	-DBONOBO_DISABLE_DEPRECATED
 AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
 
 dnl libbackground
-PKG_CHECK_MODULES(CAPPLET, "gtk+-2.0 gconf-2.0 libgnomeui-2.0")
+PKG_CHECK_MODULES(LIBBACKGROUND, "gtk+-2.0 gconf-2.0 libgnomeui-2.0")
 dnl ==========================================================================
 
 dnl ==============================================
