--- a/configure.in
+++ b/configure.in
@@ -296,7 +296,14 @@ dnl libbeagle checking
 AC_ARG_ENABLE(beagle, [  --disable-beagle     build without beagle support])
 msg_beagle=no
 if test "x$enable_beagle" != "xno"; then
-	PKG_CHECK_MODULES(BEAGLE, libbeagle-0.0 >= beagle_minver, [
+	BEAGLE_PKGCONFIG=
+	if $PKG_CONFIG --exists libbeagle-1.0; then
+		BEAGLE_PKGCONFIG=libbeagle-1.0
+	else
+		BEAGLE_PKGCONFIG=libbeagle-0.0
+	fi
+
+	PKG_CHECK_MODULES(BEAGLE, $BEAGLE_PKGCONFIG >= beagle_minver, [
 		  	  AM_CONDITIONAL(HAVE_BEAGLE, true)
 			  AC_DEFINE(HAVE_BEAGLE, 1, [Define to enable beagle support])
 			  ]
