Bring back the Connect to dialog. It still needs some work, but it's
2008-02-21  Vincent Untz  <vuntz@gnome.org>

	Bring back the Connect to dialog. It still needs some work, but it's
	better than nothing.

	* libnautilus-private/nautilus-bookmark.c: (nautilus_bookmark_new):
	Actually save the name in the bookmark, instead of forgetting it.

	* src/Makefile.am: Updated to build the connect dialog stuff.
	* src/nautilus-connect-server-dialog-main.c: (show_uri),
	(nautilus_connect_server_dialog_present_uri), (main):
	Port to gio. We use g_app_info_launch_default_for_uri() to open the
	URI, but it will need some more work because it doesn't automount the
	URI.
	* src/nautilus-connect-server-dialog-nonmain.c:
	(nautilus_connect_server_dialog_present_uri): Trivial update.
	* src/nautilus-connect-server-dialog.[ch]: (get_method_description),
	(nautilus_connect_server_dialog_finalize), (connect_to_server),
	(response_callback), (setup_for_type), (display_server_location),
	(nautilus_connect_server_dialog_init),
	(nautilus_connect_server_dialog_new): Port to gio. Add bookmark saving
	feature, to replace the old gnome-vfs network volumes. Remove the
	Browse button, which isn't really needed there. Needs some more polish.
	* src/nautilus-shell-ui.xml: Uncomment the "Connect to" action
	* src/nautilus-window-menus.c: (action_connect_to_server_callback):
	Uncomment code to make use of the dialog

svn path=/trunk/; revision=13797

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,9 +6,8 @@ bin_PROGRAMS=					\
 	nautilus				\
 	nautilus-file-management-properties	\
 	nautilus-autorun-software		\
+	nautilus-connect-server			
 	$(NULL)
-
-#	nautilus-connect-server			
 
 INCLUDES =							\
 	-I$(top_srcdir) 					\
@@ -67,6 +66,9 @@ nautilus_SOURCES = \
 	nautilus-bookmark-list.h		\
 	nautilus-bookmarks-window.c		\
 	nautilus-bookmarks-window.h		\
+	nautilus-connect-server-dialog.c	\
+	nautilus-connect-server-dialog.h	\
+	nautilus-connect-server-dialog-nonmain.c	\
 	nautilus-desktop-window.c		\
 	nautilus-desktop-window.h		\
 	nautilus-emblem-sidebar.c		\
@@ -147,14 +149,15 @@ nautilus_autorun_software_SOURCES= 			\
 	nautilus-autorun-software.c			\
 	$(NULL)
 
-# Disabled for now in the gio world
-#nautilus_connect_server_SOURCES= \
-#	nautilus-connect-server-dialog.c	\
-#	nautilus-connect-server-dialog.h	\
-#	nautilus-connect-server-dialog-main.c	\
-#	nautilus-location-entry.c		\
-#	nautilus-location-entry.h		\
-#	$(NULL)
+nautilus_connect_server_SOURCES= \
+	nautilus-bookmark-list.c		\
+	nautilus-bookmark-list.h		\
+	nautilus-connect-server-dialog.c	\
+	nautilus-connect-server-dialog.h	\
+	nautilus-connect-server-dialog-main.c	\
+	nautilus-location-entry.c		\
+	nautilus-location-entry.h		\
+	$(NULL)
 
 $(nautilus_shell_interface_idl_sources): nautilus_shell_interface_idl_stamp
 nautilus_shell_interface_idl_stamp: nautilus-shell-interface.idl $(ORBIT_IDL)
@@ -198,8 +201,6 @@ EXTRA_DIST =					\
 	check-nautilus				\
 	nautilus-shell-interface.idl		\
 	$(desktop_in_files)			\
-	nautilus-connect-server-dialog-main.c	\
-	nautilus-connect-server-dialog.c	\
 	$(NULL)
 
 BUILT_SOURCES = \
