Restore the removed connect to server files
2008-02-26  Luca Ferretti  <elle.uca@libero.it>

	* POTFILES.in:
	* POTFILES.skip:
	Restore the removed connect to server files


svn path=/trunk/; revision=13827

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -62,6 +62,8 @@ src/nautilus-application.c
 src/nautilus-autorun-software.c
 src/nautilus-bookmarks-window.c
 src/nautilus-bookmarks-window.glade
+src/nautilus-connect-server-dialog-main.c
+src/nautilus-connect-server-dialog.c
 src/nautilus-desktop-window.c
 src/nautilus-emblem-sidebar.c
 src/nautilus-file-management-properties-main.c
