Computer, Home and Open Folder .desktop files should only show in GNOME.
2008-02-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* nautilus-computer.desktop.in.in:
	* nautilus-folder-handler.desktop.in.in:
	* nautilus-home.desktop.in.in:
	Computer, Home and Open Folder .desktop files should only show in
	GNOME. Patch from Federico Mena Quintero. (#350947)

svn path=/trunk/; revision=13856

--- a/nautilus-computer.desktop.in.in
+++ b/nautilus-computer.desktop.in.in
@@ -9,6 +9,7 @@ Terminal=false
 StartupNotify=true
 Type=Application
 Categories=GNOME;GTK;Core;
+OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
