--- a/nautilus-folder-handler.desktop.in.in
+++ b/nautilus-folder-handler.desktop.in.in
@@ -9,6 +9,7 @@ Icon=folder-open
 StartupNotify=true
 Type=Application
 MimeType=x-directory/gnome-default-handler;x-directory/normal;inode/directory;application/x-gnome-saved-search;
+OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
