--- a/nautilus-home.desktop.in.in
+++ b/nautilus-home.desktop.in.in
@@ -9,6 +9,7 @@ Terminal=false
 StartupNotify=true
 Type=Application
 Categories=GNOME;GTK;Core;
+OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
