Added compact view.
2008-03-29  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-global-preferences.c
	(nautilus_global_preferences_get_default_folder_viewer_preference_a
	s_iid):
	* libnautilus-private/nautilus-global-preferences.h:
	* libnautilus-private/nautilus-icon-canvas-item.c
	(create_label_layout),
	(nautilus_icon_canvas_item_get_max_text_width):
	* libnautilus-private/nautilus-icon-container.c
	(lay_down_one_column), (get_max_icon_dimensions),
	(lay_down_icons_vertical), (lay_down_icons_vertical_desktop),
	(lay_down_icons), (size_allocate),
	(nautilus_icon_container_update_icon),
	(nautilus_icon_container_set_layout_mode),
	(nautilus_icon_container_start_renaming_selected_item),
	(nautilus_icon_container_set_forced_icon_size),
	(nautilus_icon_container_set_all_columns_same_width):
	* libnautilus-private/nautilus-icon-container.h:
	* libnautilus-private/nautilus-icon-private.h:
	* libnautilus-private/nautilus-metadata.h:
	* src/file-manager/fm-icon-container.c
	(fm_icon_container_get_icon_images),
	(fm_icon_container_get_icon_text):
	* src/file-manager/fm-icon-view.c
	(get_stored_icon_position_callback),
	(fm_icon_view_supports_manual_layout),
	(fm_icon_view_supports_tighter_layout), (update_layout_menus),
	(fm_icon_view_real_set_directory_sort_reversed),
	(fm_icon_view_get_directory_auto_layout),
	(fm_icon_view_real_get_directory_auto_layout),
	(fm_icon_view_set_directory_auto_layout),
	(fm_icon_view_real_set_directory_auto_layout),
	(fm_icon_view_real_set_directory_tighter_layout),
	(real_supports_manual_layout), (get_default_zoom_level),
	(set_labels_beside_icons), (set_columns_same_width),
	(fm_icon_view_begin_loading), (fm_icon_view_set_zoom_level),
	(fm_icon_view_zoom_to_level),
	(fm_icon_view_restore_default_zoom_level),
	(default_zoom_level_changed_callback),
	(all_columns_same_width_changed_callback),
	(fm_icon_view_set_property), (fm_icon_view_class_init),
	(fm_ic

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -532,8 +532,8 @@ most cases, this should be left alone. -->Sans 10</default>
          <short>Default folder viewer</short>
          <long>
 	 When a folder is visited this viewer is used unless you have selected
-	 another view for that particular folder. Possible values are "list_view"
-	 and "icon_view".
+	 another view for that particular folder. Possible values are "list_view",
+	 "icon_view" and "compact_view".
          </long>
       </locale>
     </schema>
@@ -663,6 +663,36 @@ most cases, this should be left alone. -->Sans 10</default>
          </long>
       </locale>
     </schema>    
+
+   <!-- Icon View -->
+    <schema>
+      <key>/schemas/apps/nautilus/compact_view/default_zoom_level</key>
+      <applyto>/apps/nautilus/compact_view/default_zoom_level</applyto>
+      <owner>nautilus</owner>
+      <type>string</type>
+      <default>standard</default>
+      <locale name="C">
+         <short>Default compact view zoom level</short>
+         <long>
+             Default zoom level used by the compact view.
+         </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/nautilus/compact_view/all_columns_have_same_width</key>
+      <applyto>/apps/nautilus/compact_view/all_columns_have_same_width</applyto>
+      <owner>nautilus</owner>
+      <type>string</type>
+      <default>standard</default>
+      <locale name="C">
+         <short>All columns have same width</short>
+         <long>
+             If this preference is set, all columns in the compact view have the same
+	     width. Otherwise, the width of each column is determined seperately.
+         </long>
+      </locale>
+    </schema>
     
     <!-- List View -->
 
