--- a/configure.in
+++ b/configure.in
@@ -118,6 +118,12 @@ IT_PROG_INTLTOOL([0.35.0])
 
 dnl ==========================================================================
 
+GTK_DOC_CHECK
+DISTCHECK_CONFIGURE_FLAGS="--enable-gtk-doc"
+AC_SUBST(DISTCHECK_CONFIGURE_FLAGS)
+
+dnl ==========================================================================
+
 ENABLE_PROFILER=
 AC_ARG_ENABLE(profiler,
  AC_HELP_STRING([--enable-profiler], [Enable profiler]),
@@ -479,6 +485,9 @@ data/icons/scalable/Makefile
 data/icons/scalable/apps/Makefile
 data/patterns/Makefile
 docs/Makefile
+docs/reference/Makefile
+docs/reference/libnautilus-extension/Makefile
+docs/reference/libnautilus-extension/version.xml
 icons/Makefile
 libbackground/Makefile
 libnautilus-private/Makefile
@@ -511,4 +520,5 @@ nautilus-$VERSION:
 	beagle support:		$msg_beagle
 
 	profiling support:      ${profiling_support}
+	nautilus-extension documentation: ${enable_gtk_doc}
 "
