Entirely move DISTCHECK_CONFIGURE_FLAGS to Makefile.am to fix distcheck.
2008-04-21  Christian Neumair  <cneumair@gnome.org>

	* Makefile.am:
	* configure.in:
	Entirely move DISTCHECK_CONFIGURE_FLAGS to Makefile.am to fix
	distcheck.

svn path=/trunk/; revision=14079

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,4 +56,4 @@ DISTCLEANFILES = \
   intltool-merge \
   intltool-update
 
-DISTCHECK_CONFIGURE_FLAGS = --disable-update-mimedb
+DISTCHECK_CONFIGURE_FLAGS = --disable-update-mimedb --enable-gtk-doc
