Removed duplicate "and" in description. Fixes #516906.
2008-05-01  Claude Paroz  <claude@2xlibre.net>

	* libnautilus-private/apps_nautilus_preferences.schemas.in: Removed
	duplicate "and" in description. Fixes #516906.

svn path=/trunk/; revision=14123

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -79,7 +79,7 @@
          <long>
            If set to true, then Nautilus will automatically mount media
            such as user-visible hard disks and removable media on start-up
-           and and media insertion.
+           and media insertion.
          </long>
       </locale>
     </schema>
