Use -Wstrict-aliasing=0 instead of -Wno-strict-aliasing, known to be
2008-05-05  A. Walton  <awalton@gnome.org>

	* configure.in:
	Use -Wstrict-aliasing=0 instead of -Wno-strict-aliasing, known to be
	broken on GCC 4.3.x < r130902 (GCC Bug #34973). Closes GNOME 
	bug #528081.


svn path=/branches/gnome-2-22/; revision=14138

--- a/configure.in
+++ b/configure.in
@@ -361,7 +361,7 @@ if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
 	-Wcast-align \
 	-Werror"
 
-	for option in -Wno-strict-aliasing -Wno-pointer-sign; do
+	for option in -Wstrict-aliasing=0 -Wno-pointer-sign; do
 		SAVE_CFLAGS="$WARNING_CFLAGS"
 		WARNING_CFLAGS="$WARNING_CFLAGS $option"
 		AC_MSG_CHECKING([whether gcc understands $option])
