Use the right type for all_columns_have_same_width key in the schemas
2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Use the right type for all_columns_have_same_width key in the
	schemas description file. (#532363).

svn path=/trunk/; revision=14150

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -683,8 +683,8 @@ most cases, this should be left alone. -->Sans 10</default>
       <key>/schemas/apps/nautilus/compact_view/all_columns_have_same_width</key>
       <applyto>/apps/nautilus/compact_view/all_columns_have_same_width</applyto>
       <owner>nautilus</owner>
-      <type>string</type>
-      <default>standard</default>
+      <type>bool</type>
+      <default>true</default>
       <locale name="C">
          <short>All columns have same width</short>
          <long>
