Adds manpages taken from the Debian package. Many thanks to the Debian doc
2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* docs/Makefile.am:
	* docs/nautilus-connect-server.1:
	* docs/nautilus-file-management-properties.1:
	* docs/nautilus.1:
	Adds manpages taken from the Debian package. Many thanks to the
	Debian doc authors for these and for making them available
	under the GPL license. (#310473 and #501698).

svn path=/trunk/; revision=14180

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -2,7 +2,14 @@ NULL =
 
 SUBDIRS = reference
 
+man_MANS = \
+	nautilus.1 \
+	nautilus-connect-server.1 \
+	nautilus-file-management-properties.1 \
+	$(NULL)
+
 EXTRA_DIST = \
+	$(man_MANS) \
 	architecture.txt \
 	dnd.txt \
 	load-states.dia \
