Use medium as singular of media. Fixes #522986.
2008-05-24  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-autorun.c:
	* src/nautilus-autorun-software.c
	(present_autorun_for_software_dialog):
	Use medium as singular of media. Fixes #522986.

svn path=/trunk/; revision=14192

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -108,10 +108,10 @@
       <type>bool</type>
       <default>false</default>
       <locale name="C">
-         <short>Never prompt or autorun/autostart programs when media is inserted</short>
+         <short>Never prompt or autorun/autostart programs when media are inserted</short>
          <long>
            If set to true, then Nautilus will never prompt nor autorun/autostart
-           programs when media is inserted.
+           programs when a medium is inserted.
          </long>
       </locale>
     </schema>
