--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -79,6 +79,7 @@ src/nautilus-main.c
 src/nautilus-navigation-window-menus.c
 src/nautilus-navigation-window-ui.xml
 src/nautilus-navigation-window.c
+src/nautilus-notebook.c
 src/nautilus-notes-viewer.c
 src/nautilus-pathbar.c
 src/nautilus-places-sidebar.c
@@ -97,6 +98,7 @@ src/nautilus-window-bookmarks.c
 src/nautilus-window-manage-views.c
 src/nautilus-window-menus.c
 src/nautilus-window-private.h
+src/nautilus-window-slot.c
 src/nautilus-window-toolbars.c
 src/nautilus-window.c
 src/nautilus-x-content-bar.c
