--- a/configure.in
+++ b/configure.in
@@ -255,16 +255,26 @@ dnl ==========================================================================
 
 dnl exempi checking
 
-PKG_CHECK_MODULES(EXEMPI, exempi-2.0 >= exempi_minver, [
-		  AM_CONDITIONAL(HAVE_EXEMPI, true)
-		  AC_DEFINE(HAVE_EXEMPI, 1, [Define to enable XMP support])
-		  ], [AM_CONDITIONAL(HAVE_EXEMPI, false)])
+AM_CONDITIONAL(HAVE_EXEMPI, false)
 
-PKG_CHECK_MODULES(EXEMPI_NEW_API, exempi-2.0 >= exempi_minver_newapi,
+AC_ARG_ENABLE(xmp, 
+	AC_HELP_STRING([--disable-xmp], 
+			[build without xmp support]))
+msg_xmp=no
+if test "x$enable_xmp" != "xno"; then
+	PKG_CHECK_MODULES(EXEMPI, exempi-2.0 >= exempi_minver, [
+		  	  AM_CONDITIONAL(HAVE_EXEMPI, true)
+			  AC_DEFINE(HAVE_EXEMPI, 1, [Define to enable xmp support])
+			  ]
+                          msg_xmp=yes,
+	          	  [AM_CONDITIONAL(HAVE_EXEMPI, false)])
+
+	PKG_CHECK_MODULES(EXEMPI_NEW_API, exempi-2.0 >= exempi_minver_newapi,
 		  AC_DEFINE(HAVE_EXEMPI_NEW_API, 1, [Define if we have exempi with the new API]), true)
 
-AC_SUBST(EXEMPI_CFLAGS)
-AC_SUBST(EXEMPI_LIBS)
+	AC_SUBST(EXEMPI_CFLAGS)
+	AC_SUBST(EXEMPI_LIBS)
+fi
 
 dnl ==========================================================================
 dnl search implementations
@@ -274,7 +284,9 @@ AM_CONDITIONAL(HAVE_TRACKER, false)
 
 dnl libtracker checking
 			    			  
-AC_ARG_ENABLE(tracker, [  --disable-tracker     build without tracker support])
+AC_ARG_ENABLE(tracker, 
+	AC_HELP_STRING([--disable-tracker], 
+			[build without tracker support]))
 msg_tracker=no
 if test "x$enable_tracker" != "xno"; then
 	PKG_CHECK_MODULES(TRACKER, tracker >= tracker_minver, [
@@ -293,8 +305,10 @@ dnl ==========================================================================
 AM_CONDITIONAL(HAVE_BEAGLE, false)
 
 dnl libbeagle checking
-			    			  
-AC_ARG_ENABLE(beagle, [  --disable-beagle     build without beagle support])
+
+AC_ARG_ENABLE(beagle, 
+	AC_HELP_STRING([--disable-beagle], 
+			[build without beagle support]))
 msg_beagle=no
 if test "x$enable_beagle" != "xno"; then
 	BEAGLE_PKGCONFIG=
@@ -501,6 +515,7 @@ nautilus-$VERSION:
 	compiler:		${CC}
 	tracker support:	$msg_tracker
 	beagle support:		$msg_beagle
+	xmp support:		$msg_xmp
 
 	profiling support:      ${profiling_support}
 	nautilus-extension documentation: ${enable_gtk_doc}
